--- a/globals/excellapp/templates/publicapp/viewclient.html
+++ b/globals/excellapp/templates/publicapp/viewclient.html
@@ -73,7 +73,7 @@
                                         {{ i.client_meet }}
                                     </td>
                                     <td>
-                                        <button>Approve</button>
+                                        <button><a href="{% url 'approve' i.id %}">Approve</a></button>
                                     </td>
                                 </tr>
                        
